[profile.release]
strip = true

[package]
name = "thatnoobskyapp"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "2.6.0"

[target.'cfg(windows)'.build]
rustflags = ["-Clink-args=-Wl,--subsystem,windows"]